[package]
name = "github_issues"
version = "0.1.0"
authors = ["Beg <a.behaghel@inato.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.9.0"
anyhow = "1.0.40"
serde = "1.0.125"
reqwest = { version = "0.11.2", features = ["json", "blocking"] }
prettytable-rs = "0.8.0"
structopt = "0.3.21"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.14"
env_logger = "0.8.3"
hello_macro = { path = "../hello_macro" }
hello_macro_derive = { path = "../hello_macro_derive" }
